<resources>
    <string name="app_name">Music</string>
    <string name="sign_up">Sign up</string>
    <string name="we_are_happy_to_see_you_here">We are happy to see you here!</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="welcome">Welcome!</string>
</resources>