<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/sign_up"
        android:textColor="@color/coal"
        android:textSize="38sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_person_24"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/coal"
        android:textColorHint="@color/coal"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:hint="@string/email_address"
        android:inputType="textWebEmailAddress"
        android:padding="20dp"
        android:textColor="@color/coal"
        android:textColorHint="@color/coal"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/baseline_key_24"
        android:hint="@string/password"
        android:inputType="textPassword|textWebPassword"
        android:padding="20dp"
        android:textColor="@color/coal"
        android:textColorHint="@color/coal"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="@color/gray"
        android:text="@string/sign_me_up"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>